--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,19 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            /*externalNativeBuild {
+                cmake {
+                    arguments "-D_LOG=FALSE"
+                }
+            }*/
+        }
+        debug {
+            jniDebuggable true
+            externalNativeBuild {
+                cmake {
+                    arguments "-D_LOG=FALSE"
+                }
+            }
         }
     }
     externalNativeBuild {
