--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ android {
             }
         }*/
     }
+    ndkVersion = '20.1.5948944'
+    flavorDimensions "default"
 }
 
 dependencies {
@@ -86,6 +88,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+//    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
